--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -22,12 +22,16 @@
     <!-- custom Css-->
     <link href="{% static 'theme/css/custom.min.css' %}" rel="stylesheet" type="text/css">
     <!--Jqurey-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="{% static 'app-css/common.css' %}">
     <!---comman css -->
     <script src="{% static 'app-js/common.js' %}"></script>
     <!--Sweet Alert-->
     <script src="{% static 'app-js/sweetalert.js' %}"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
 </head>
 <body class="dashboard-topbar-wrapper">
     <div id="spinner-element-lg">
