--- a/app/templates/staffs.html
+++ b/app/templates/staffs.html
@@ -41,7 +41,7 @@
 </div>
 <!-- Staff table start -->
 <section class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 text-center">
         {% if staff_data %}
             <table class="table table-striped table-hover table-sticky table_students" id="staffTable">
                 <thead class="thead-dark">
