--- a/app/templates/student_info.html
+++ b/app/templates/student_info.html
@@ -193,7 +193,7 @@
                                         </div>
                                         {% endfor %}
                                     {% else %}
-                                    <div class="row mx-0 my-2" id="no_data_found">
+                                    <div class="text-center" id="no_data_found">
                                         <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
                                     </div>
                                     {% endif %}
@@ -205,7 +205,7 @@
                             <div class="mb-0">
                                 dynamic code goes here
                                 <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-12 text-center">
                                     {% if transport_dat %}
                                     {% else %}
                                         <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
@@ -219,7 +219,7 @@
                             <div class="mb-0">
                                 dynamic code goes here
                                 <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-12 text-center">
                                     {% if transport_dat %}
                                     {% else %}
                                         <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
@@ -233,7 +233,7 @@
                             <div class="mb-0">
                                 dynamic code goes here
                                 <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-12 text-center">
                                     {% if transport_dat %}
                                     {% else %}
                                         <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
@@ -268,7 +268,7 @@
                             <div class="mb-0">
                                 dynamic code goes here
                                 <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-12 text-center">
                                     {% if transport_data %}
                                     {% else %}
                                         <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
@@ -282,7 +282,7 @@
                             <div class="mb-0">
                                 dynamic code goes here
                                 <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-12 text-center">
                                     {% if transport_data %}
                                     {% else %}
                                         <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
@@ -296,7 +296,7 @@
                             <div class="mb-0">
                                 dynamic code goes here
                                 <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-12 text-center">
                                     {% if transport_data %}
                                     {% else %}
                                         <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
@@ -310,7 +310,7 @@
                             <div class="mb-0">
                                 dynamic code goes here
                                 <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-12 text-center">
                                     {% if transport_data %}
                                     {% else %}
                                         <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
