--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -139,7 +139,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link menu-link"> <i class="bi bi-journal-richtext"></i>
+                            <a href="{% url 'assignments' %}" class="nav-link menu-link"> <i class="bi bi-journal-richtext"></i>
                                 <span data-key="t-file-manager">Assignments</span> </a>
                         </li>
 
