--- a/app/templates/student_info.html
+++ b/app/templates/student_info.html
@@ -1,9 +1,11 @@
+
 {% extends '_layout.html' %}
 {% block title %} Student Info {% endblock %}
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'app-css/common.css' %}">
-<script src="{% static 'app-js/sweetalert.js' %}"></script>
+<!-- Include FullCalendar JavaScript -->
+<script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script><script src="{% static 'app-js/sweetalert.js' %}"></script>
 <script src="{% static 'app-js/studentInfo.js' %}"></script>
 
 <div class="row" id="heading-row">
@@ -201,17 +203,12 @@
                             </div>
                         </div>
                         <div class="tab-pane" id="attendance" role="tabpanel">
-                            <h6>List of Attendance</h6>
-                            <div class="mb-0">
-                                dynamic code goes here
-                                <div class="row">
+                            <h6>Attendance</h6>
+                            <qoute>Consistent attendance breeds achievement.</qoute>
+                            <div class="row mb-0">
                                 <div class="col-md-12 text-center">
-                                    {% if transport_dat %}
-                                    {% else %}
-                                        <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
-                                    {% endif %}
+                                    <div id="AttendanceCalendar"></div>
                                 </div>
-                            </div>
                             </div>
                         </div>
                         <div class="tab-pane" id="calendar" role="tabpanel">
@@ -291,20 +288,44 @@
                             </div>
                             </div>
                         </div>
+                        <!-- assginment Tab Start -->
                         <div class="tab-pane" id="assignments" role="tabpanel">
-                            <h6>assignments of this class</h6>
-                            <div class="mb-0">
-                                dynamic code goes here
+                            <h6>Assignments</h6>
+                            <quote>Where challenges become triumphs, and learning is a journey, not a destination</quote>
+                            <div class="mb-0 my-3">
                                 <div class="row">
-                                <div class="col-md-12 text-center">
-                                    {% if transport_data %}
-                                    {% else %}
-                                        <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
-                                    {% endif %}
+                                    <div class="col-md-12">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <table class="table table-striped table-hover table-sticky table_students table-center">
+                                                    <thead class="thead-dark">
+                                                        <tr>
+                                                            <th>Title</th>
+                                                            <th>Date</th>
+                                                            <th>Due Date</th>
+                                                            <th>Details</th>
+                                                            <th>Status</th>
+                                                            <th>Action</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody class='assignTbody' id="assignments_details">
+                                                        {% if assignment_data %}
+                                                        {% else %}
+                                                            <tr>
+                                                                <td colspan="7" class="text-center">
+                                                                    <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
+                                                                </td>
+                                                            </tr>
+                                                        {% endif %}
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            </div>
                         </div>
+                        <!-- assginment Tab End -->
                         <div class="tab-pane" id="documents" role="tabpanel">
                             <h6>documents of this class</h6>
                             <div class="mb-0">
@@ -412,6 +433,23 @@
     </div>
 </div>
 <!-- modelform form parent end -->
+<!-- model popupfor assignment detailse-->
+<div class="modal fade bs-example-modal-lg" id="assignmentDetailse" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title"></h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body">
+                <p class="modal-desc"></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- model popupfor assignment detailse-->
+
 
 {% endblock %}
 
